--- a/yamlfile.yaml
+++ b/yamlfile.yaml
@@ -8,7 +8,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: ["Google_map_Assignment" ]
-
+  schedule:
+    - cron: '30 9 * * *'
 permissions:
   contents: read
 
@@ -39,4 +40,4 @@ jobs:
 
     - name: Run Behave BDD tests
       run: |
-        runner.py
+        features/runner.py
